--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
@@ -45,4 +45,11 @@
 	publisher={Cobertura Universal de Salud}
 }
 
+@book{javaLibro,
+	title={Fundamentos de Programaci{\'o}n en Java},
+	author={Jorge Martinez Ladr{\'o}n de Guevara},
+	year={2012},
+	publisher={Editorial EME}
+}
+
 
