--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte1.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte1.tex
@@ -37,9 +37,7 @@
 
 \partTitle{Conceptos básicos}
 
-\partDesc{En esta primera parte del documento se presentan los conceptos manejados en este trabajo para definir el tratamiento realizado. Esto comprende los elementos que componen la especificación del proyecto y los fundamentos que sustentan las soluciones propuestas para alcanzar los objetivos planteados. Se realiza una breve aclaración de todos estos recursos, introducidos en un orden conveniente, para dar contexto a cómo se propone encarar el proyecto y cuál es la base identificada para poder realizar ello con éxito. }
-
-\partDesc{En esta primera parte del documento se presentan los conceptos manejados en este trabajo para definir el tratamiento realizado. Esto comprende los elementos que componen la especificación del proyecto y los fundamentos que sustentan las soluciones propuestas para alcanzar los objetivos planteados. Se realiza una breve aclaración de todos estos recursos, introducidos en un orden conveniente, para dar contexto a cómo se propone encarar el proyecto y cuál es la base identificada para poder realizar ello con éxito. }
+\partDesc{En esta primera parte del documento se establece un marco teórico en función de explicar e introducir conceptos claves que componen el presente proyecto. Esto comprende los elementos que componen la especificación del proyecto y los fundamentos que sustentan las soluciones propuestas para alcanzar los objetivos planteados, junto con los alcances. Es importante que el lector conozca para la lectura posterior todos los conceptos presentados en ésta parte, debido a que se han aplicado cuestiones de los mismos y que devienen del análisis realizado en cuanto a la problemática y el enfoque propuesto para su solución.}
 
 \partBackText{}
 
