--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Tesis.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Tesis.tex
@@ -134,7 +134,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 \mainmatter
 \restauraCabecera
 
-%\include{Capitulos/Parte1}
+\include{Capitulos/Parte1}
 \include{Capitulos/01Capitulo1}
 \include{Capitulos/01Capitulo2}
 %\include{Capitulos/01Capitulo3}
@@ -161,7 +161,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 % Apéndices
 \appendix
-%\include{Apendices/ParteApendices}
+\include{Apendices/ParteApendices}
 \include{Apendices/01ApendiceA}
 %\include{Apendices/01ApendiceB}
 %\include{Apendices/01ApendiceC}
