--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Tesis.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Tesis.tex
@@ -122,7 +122,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 \include{Cascaras/resumen}
 
-\include{Cascaras/prefacio}
+%\include{Cascaras/prefacio}
 
 \ifx\generatoc\undefined
 \else
