--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
@@ -59,4 +59,11 @@
 	publisher={}
 }
 
+@misc{httpProtocolo,
+	title = {El protocolo HTTP},
+	author = {Germ{\'a}n Escobar},
+	howpublished = {\url{https://blog.makeitreal.camp/el-protocolo-http/}},
+	note = {Accedido: 20/01/2019}
+}
+
 
